npm run build-spaces

--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   },
   "scripts": {
     "build": "webpack --mode production",
+    "build-spaces": "webpack --mode production -o ../../../inc/js/spaces-ckeditor-classic.js",
     "lint": "eslint --quiet '**/*.js'",
     "preversion": "npm run build; if [ -n \"$(git status src/ckeditor.js build/ --porcelain)\" ]; then git add -u src/ckeditor.js build/ && git commit -m 'Internal: Build.'; fi"
   },
@@ -87,5 +88,9 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-autosave": "^15.0.0",
+    "@ckeditor/ckeditor5-ui": "^15.0.0"
   }
 }
